# SSDD_Final

./: .clang-format  .gitignore  README.md
src/: README.md  app.sh  autores.txt  claves.c  claves.h  client.py  prueba.txt  test.sh
src/client/: Dockerfile  client.py  requirements.txt  server_svc.py
src/client/GUI/: app.py
src/client/GUI/static/: app.js  styles.css
src/client/netools/: __init__.py  netools.py
src/logger/: CMakeLists.txt  logger.c  logger.x
src/server/: CMakeLists.txt  claves.c  claves.h  lines.c  lines.h  server.c
src/test_files/expected/: connect_1_expected.txt  connect_2_expected.txt  connect_3_expected.txt  delete_1_expected.txt  delete_2_expected.txt  delete_3_expected.txt  disconnect_1_expected.txt  disconnect_2_expected.txt  disconnect_3_expected.txt  list_content_1_expected.txt  list_content_2_expected.txt  list_content_3_expected.txt  list_content_4_expected.txt  list_users_1_expected.txt  list_users_2_expected.txt  publish_1_expected.txt  publish_2_expected.txt  publish_3_expected.txt  quit_expected.txt  register_2_expected.txt  test_1_expected.txt  unregister_1_expected.txt  unregister_2_expected.txt
src/test_files/input/: connect_1.txt  connect_2.txt  connect_3.txt  delete_1.txt  delete_2.txt  delete_3.txt  disconnect_1.txt  disconnect_2.txt  disconnect_3.txt  list_content_1.txt  list_content_2.txt  list_content_3.txt  list_content_4.txt  list_users_1.txt  list_users_2.txt  publish_1.txt  publish_2.txt  publish_3.txt  register_1.txt  register_2.txt  test_1.txt  unregister_1.txt  unregister_2.txt
src/web_server/: web_server.py
(+3 files in other folders)
